--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 06:05:02 2018</p>
+         Last Run: Wed Oct 31 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -58,11 +58,11 @@
                         <td>6</td>
                         <td>4</td>
                         <td>5</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -173,7 +173,7 @@
                "data":[
                  "80",
                  "70",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "23",
                  "21",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 06:05:02 2018</p>
+         Last Run: Wed Oct 31 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>5</td>
-                        <td>31</td>
+                        <td>Overcast</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>21</td>
                         <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>24</td>
-                        <td>54</td>
+                        <td>20</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>94</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>22</td>
+                        <td>20</td>
                         <td>51</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>92</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "5",
+                 "6",
                  "6",
                  "9"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "7",
+                 "8",
                  "8",
                  "9"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "24",
-                 "22"
+                 "21",
+                 "20",
+                 "20"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "54",
+                 "53",
                  "51"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "94",
-                 "92"
+                 "96",
+                 "78",
+                 "71"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 06:05:02 2018</p>
+         Last Run: Wed Oct 31 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>24</td>
-                        <td>78</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>65</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>24</td>
-                        <td>79</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>69</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>14</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>71</td>
+                        <td>WNW</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "79",
-                 "81"
+                 "81",
+                 "81",
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "69",
-                 "71"
+                 "73",
+                 "75",
+                 "75"
                ]
              }
            ]
