--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 07:05:06 2018</p>
+         Last Run: Wed Oct 31 08:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -60,7 +60,7 @@
                         <td>5</td>
                         <td>61</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
                         <td>24</td>
                      </tr>
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 07:05:06 2018</p>
+         Last Run: Wed Oct 31 08:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -260,7 +260,7 @@
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>20</td>
+                        <td>19</td>
                         <td>53</td>
                         <td>1</td>
                         <td>10</td>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "21",
-                 "20",
+                 "19",
                  "20"
                ]
              },
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 07:05:06 2018</p>
+         Last Run: Wed Oct 31 08:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>73</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -479,20 +479,20 @@
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>75</td>
+                        <td>WNW</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>14</td>
-                        <td>83</td>
+                        <td>9</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WNW</td>
-                        <td>75</td>
+                        <td>77</td>
                      </tr>
                   </tbody>
                </table>
@@ -592,7 +592,7 @@
                "data":[
                  "24",
                  "24",
-                 "14"
+                 "9"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "81",
                  "81",
-                 "83"
+                 "84"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
                  "75",
-                 "75"
+                 "77",
+                 "77"
                ]
              }
            ]
