--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 08:05:06 2018</p>
+         Last Run: Wed Oct 31 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -58,9 +58,9 @@
                         <td>6</td>
                         <td>4</td>
                         <td>5</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>24</td>
                      </tr>
@@ -173,7 +173,7 @@
                "data":[
                  "80",
                  "70",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 08:05:06 2018</p>
+         Last Run: Wed Oct 31 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,11 +253,11 @@
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
                         <td>19</td>
@@ -265,7 +265,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>78</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>71</td>
+                        <td>77</td>
                      </tr>
                   </tbody>
                </table>
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "78",
-                 "71"
+                 "97",
+                 "82",
+                 "77"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 08:05:06 2018</p>
+         Last Run: Wed Oct 31 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
