--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 09:05:02 2018</p>
+         Last Run: Wed Oct 31 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "81",
                  "70",
                  "62"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 09:05:02 2018</p>
+         Last Run: Wed Oct 31 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>21</td>
+                        <td>20</td>
                         <td>56</td>
                         <td>1</td>
                         <td>11</td>
@@ -260,8 +260,8 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>19</td>
-                        <td>53</td>
+                        <td>18</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
@@ -272,12 +272,12 @@
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>20</td>
-                        <td>51</td>
+                        <td>21</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "19",
-                 "20"
+                 "20",
+                 "18",
+                 "21"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "53",
-                 "51"
+                 "54",
+                 "52"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "97",
                  "82",
-                 "77"
+                 "76"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 09:05:02 2018</p>
+         Last Run: Wed Oct 31 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,22 +460,22 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>24</td>
-                        <td>81</td>
+                        <td>37</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>24</td>
+                        <td>38</td>
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
@@ -487,7 +487,7 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>9</td>
+                        <td>11</td>
                         <td>84</td>
                         <td>0</td>
                         <td>6</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "9"
+                 "37",
+                 "38",
+                 "11"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
+                 "82",
                  "81",
                  "84"
                ]
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
+                 "76",
                  "77",
                  "77"
                ]
