--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 11:05:02 2018</p>
+         Last Run: Wed Oct 31 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -58,9 +58,9 @@
                         <td>6</td>
                         <td>4</td>
                         <td>5</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
                         <td>24</td>
                      </tr>
@@ -173,7 +173,7 @@
                "data":[
                  "81",
                  "70",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 11:05:02 2018</p>
+         Last Run: Wed Oct 31 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>8</td>
                         <td>6</td>
                         <td>19</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>9</td>
                         <td>9</td>
                         <td>20</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "53",
-                 "52"
+                 "51"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 11:05:02 2018</p>
+         Last Run: Wed Oct 31 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,19 +463,19 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>35</td>
+                        <td>32</td>
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>34</td>
+                        <td>24</td>
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
-                 "34",
+                 "32",
+                 "24",
                  "9"
                ]
              },
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
+                 "76",
                  "78",
                  "77"
                ]
