--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 12:05:02 2018</p>
+         Last Run: Wed Oct 31 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>7</td>
-                        <td>81</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>23</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>6</td>
-                        <td>70</td>
+                        <td>5</td>
+                        <td>71</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>21</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>5</td>
-                        <td>62</td>
+                        <td>4</td>
+                        <td>61</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
-                        <td>24</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
                  "6",
-                 "5"
+                 "5",
+                 "4"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "70",
-                 "62"
+                 "83",
+                 "71",
+                 "61"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "21",
-                 "24"
+                 "16",
+                 "15",
+                 "16"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 12:05:02 2018</p>
+         Last Run: Wed Oct 31 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>19</td>
-                        <td>56</td>
+                        <td>37</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>18</td>
-                        <td>53</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>24</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>82</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>20</td>
-                        <td>51</td>
-                        <td>1</td>
+                        <td>31</td>
+                        <td>50</td>
+                        <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>76</td>
+                        <td>WNW</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "6",
-                 "6",
+                 "9",
                  "9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "8",
-                 "8",
+                 "9",
                  "9"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "18",
-                 "20"
+                 "37",
+                 "24",
+                 "31"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "53",
-                 "51"
+                 "54",
+                 "51",
+                 "50"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "82",
-                 "76"
+                 "96",
+                 "92",
+                 "91"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 12:05:02 2018</p>
+         Last Run: Wed Oct 31 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,35 +464,35 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>32</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>76</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>Overcast</td>
+                        <td>-2</td>
+                        <td>-4</td>
                         <td>24</td>
-                        <td>81</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>WNW</td>
-                        <td>78</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>9</td>
                         <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WNW</td>
-                        <td>77</td>
+                        <td>81</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>10</td>
+                        <td>86</td>
+                        <td>0</td>
+                        <td>6</td>
+                        <td>WNW</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-6",
+                 "-4",
                  "-6"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-3",
+                 "-2",
                  "-3"
                ]
              }
@@ -592,7 +592,7 @@
                "data":[
                  "32",
                  "24",
-                 "9"
+                 "10"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "81",
-                 "83"
+                 "82",
+                 "83",
+                 "86"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "78",
-                 "77"
+                 "80",
+                 "81",
+                 "80"
                ]
              }
            ]
