--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 13:05:02 2018</p>
+         Last Run: Wed Oct 31 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>83</td>
+                        <td>7</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>16</td>
+                        <td>SSW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>1</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>15</td>
+                        <td>SSW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "7",
                  "5",
                  "4"
                ]
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "71",
+                 "80",
+                 "69",
                  "61"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
                  "15",
-                 "16"
+                 "14",
+                 "15"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 13:05:02 2018</p>
+         Last Run: Wed Oct 31 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>37</td>
+                        <td>40</td>
                         <td>54</td>
                         <td>1</td>
                         <td>11</td>
@@ -257,11 +257,11 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>24</td>
-                        <td>51</td>
+                        <td>34</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
@@ -272,11 +272,11 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>31</td>
-                        <td>50</td>
+                        <td>34</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>91</td>
                      </tr>
                   </tbody>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
-                 "24",
-                 "31"
+                 "40",
+                 "34",
+                 "34"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "54",
-                 "51",
-                 "50"
+                 "52",
+                 "51"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 13:05:02 2018</p>
+         Last Run: Wed Oct 31 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>32</td>
-                        <td>82</td>
+                        <td>42</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>80</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>24</td>
-                        <td>83</td>
+                        <td>36</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
-                        <td>81</td>
+                        <td>W</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>10</td>
-                        <td>86</td>
+                        <td>15</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WNW</td>
-                        <td>80</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "24",
-                 "10"
+                 "42",
+                 "36",
+                 "15"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "83",
-                 "86"
+                 "79",
+                 "79",
+                 "81"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "80",
-                 "81",
-                 "80"
+                 "82",
+                 "81"
                ]
              }
            ]
