--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 06:05:02 2018</p>
+         Last Run: Thu Nov  1 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,31 +38,31 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>38</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>65</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>42</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>46</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "6",
-                 "5"
+                 "5",
+                 "4"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "42",
-                 "46"
+                 "45",
+                 "48",
+                 "49"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 06:05:02 2018</p>
+         Last Run: Thu Nov  1 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>44</td>
-                        <td>58</td>
+                        <td>46</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
@@ -260,8 +260,8 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>47</td>
-                        <td>57</td>
+                        <td>51</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
@@ -272,12 +272,12 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>50</td>
-                        <td>55</td>
+                        <td>54</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
-                 "47",
-                 "50"
+                 "46",
+                 "51",
+                 "54"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "59",
                  "58",
-                 "57",
-                 "55"
+                 "56"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "88",
                  "91",
-                 "91"
+                 "92"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 06:05:02 2018</p>
+         Last Run: Thu Nov  1 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,37 +462,37 @@
                         <td>09:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
-                        <td>-6</td>
-                        <td>31</td>
-                        <td>80</td>
+                        <td>-3</td>
+                        <td>36</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>NW</td>
-                        <td>88</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>31</td>
-                        <td>80</td>
+                        <td>36</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NW</td>
-                        <td>88</td>
+                        <td>NNW</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>41</td>
-                        <td>83</td>
+                        <td>36</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-3",
                  "-6",
                  "-6"
                ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "31",
-                 "41"
+                 "36",
+                 "36",
+                 "36"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "80",
-                 "83"
+                 "78",
+                 "78",
+                 "80"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "88",
-                 "89"
+                 "84",
+                 "85",
+                 "86"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 06:05:02 2018</p>
+         Last Run: Thu Nov  1 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>11</td>
+                        <td>-6</td>
+                        <td>-9</td>
+                        <td>5</td>
                         <td>73</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNE</td>
-                        <td>57</td>
+                        <td>ESE</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>11</td>
-                        <td>73</td>
+                        <td>5</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
-                        <td>65</td>
+                        <td>E</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-6</td>
-                        <td>-9</td>
-                        <td>13</td>
+                        <td>-7</td>
+                        <td>-10</td>
+                        <td>12</td>
                         <td>77</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>E</td>
-                        <td>70</td>
+                        <td>ESE</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
                  "-9",
-                 "-9"
+                 "-9",
+                 "-10"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
                  "-6",
-                 "-6"
+                 "-6",
+                 "-7"
                ]
              }
            ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "11",
-                 "13"
+                 "5",
+                 "5",
+                 "12"
                ]
              },
              {
@@ -817,7 +817,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "73",
+                 "74",
                  "77"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "65",
-                 "70"
+                 "53",
+                 "61",
+                 "66"
                ]
              }
            ]
