--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 23:05:02 2018</p>
+         Last Run: Fri Nov  2 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,19 +38,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>65</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "5",
+                 "4",
                  "3"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "62",
                  "61",
-                 "59",
-                 "63"
+                 "64"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 23:05:02 2018</p>
+         Last Run: Fri Nov  2 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>49</td>
                         <td>1</td>
                         <td>14</td>
@@ -377,7 +377,7 @@
                "data":[
                  "24",
                  "13",
-                 "14"
+                 "13"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 23:05:02 2018</p>
+         Last Run: Fri Nov  2 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -468,14 +468,14 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>77</td>
                         <td>0</td>
                         <td>8</td>
@@ -487,7 +487,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>78</td>
                         <td>0</td>
                         <td>8</td>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "49",
-                 "45",
-                 "32"
+                 "46",
+                 "33"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
+                 "89",
                  "89",
                  "90"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 23:05:02 2018</p>
+         Last Run: Fri Nov  2 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>22</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
+                 "71",
                  "72",
                  "74"
                ]
